[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Shop.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Born2bSportyV2 (1).ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/coin1_16x16.png" type="Texture" id=3]
[ext_resource path="res://Sprites/IconPackAndelRodis/IconPackByAndelRodis/pngonebyone/leftarrow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/08_bread_dish.png" type="Texture" id=5]
[ext_resource path="res://Sprites/15_burger.png" type="Texture" id=6]
[ext_resource path="res://Sprites/79_pancakes.png" type="Texture" id=7]
[ext_resource path="res://Sprites/20_bagel.png" type="Texture" id=8]
[ext_resource path="res://Sprites/38_friedegg.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Fadeout.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=18]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=19]
size = 47
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Coin_Label" type="Label" parent="."]
margin_left = 634.491
margin_top = 6.54977
margin_right = 662.491
margin_bottom = 54.5498
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_top = 1151.0
margin_right = 612.0
margin_bottom = 1757.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 610.283, 28.1397 )
scale = Vector2( 3, 3 )
frames = SubResource( 17 )
frame = 3
speed_scale = 5.0
playing = true

[node name="Shop_Label" type="Label" parent="."]
margin_left = 304.709
margin_top = 54.9899
margin_right = 332.709
margin_bottom = 70.9899
custom_fonts/font = SubResource( 18 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 21, 0 )

[node name="Apple_Button" type="Button" parent="Node2D"]
margin_left = 258.304
margin_top = 184.882
margin_right = 270.304
margin_bottom = 204.882
rect_scale = Vector2( 7.16, 4.16 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hamburgue_Button" type="Button" parent="Node2D"]
margin_left = 366.304
margin_top = 184.882
margin_right = 378.304
margin_bottom = 204.882
rect_scale = Vector2( 7.16, 4.16 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancake_Button" type="Button" parent="Node2D"]
margin_left = 481.304
margin_top = 192.882
margin_right = 493.304
margin_bottom = 212.882
rect_scale = Vector2( 7.16, 4.16 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banana" type="Button" parent="Node2D"]
margin_left = 140.252
margin_top = 182.955
margin_right = 152.252
margin_bottom = 202.955
rect_scale = Vector2( 8.44978, 4.2425 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apple_Label" type="Label" parent="Node2D"]
margin_left = 272.536
margin_top = 277.614
margin_right = 335.536
margin_bottom = 325.614
custom_fonts/font = SubResource( 19 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hamburgue" type="Label" parent="Node2D"]
margin_left = 377.536
margin_top = 277.614
margin_right = 440.536
margin_bottom = 325.614
custom_fonts/font = SubResource( 19 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancake" type="Label" parent="Node2D"]
margin_left = 487.536
margin_top = 277.614
margin_right = 568.536
margin_bottom = 325.614
custom_fonts/font = SubResource( 19 )
text = "40"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bagel_Button" type="Button" parent="Node2D"]
margin_left = 127.252
margin_top = 360.955
margin_right = 139.252
margin_bottom = 380.955
rect_scale = Vector2( 8.44978, 4.2425 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bagel_Label" type="Label" parent="Node2D"]
margin_left = 146.536
margin_top = 452.614
margin_right = 209.536
margin_bottom = 500.614
custom_fonts/font = SubResource( 19 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outras" type="Node2D" parent="."]
position = Vector2( 21, 0 )

[node name="Apple" type="Sprite" parent="Outras"]
position = Vector2( 366.709, 248.69 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
offset = Vector2( -21.706, -7.44465 )

[node name="Hamburgue" type="Sprite" parent="Outras"]
position = Vector2( 475.709, 255.69 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
offset = Vector2( -21.706, -7.44465 )

[node name="Bananada" type="Sprite" parent="Outras"]
position = Vector2( 268.358, 252.582 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 8 )
offset = Vector2( -21.706, -7.44465 )

[node name="Pancakes" type="Sprite" parent="Outras"]
position = Vector2( 525.614, 232.444 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Bagel" type="Sprite" parent="Outras"]
position = Vector2( 248.709, 430.69 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
offset = Vector2( -21.706, -7.44465 )

[node name="CanvasLayer2" parent="." instance=ExtResource( 10 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 11 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/Apple_Button" to="." method="_on_Apple_Button_pressed"]
[connection signal="pressed" from="Node2D/Hamburgue_Button" to="." method="_on_Uva_Button_pressed"]
[connection signal="pressed" from="Node2D/Pancake_Button" to="." method="_on_Pancake_Button_pressed"]
[connection signal="pressed" from="Node2D/Banana" to="." method="_on_Banana_pressed"]
[connection signal="pressed" from="Node2D/Bagel_Button" to="." method="_on_Bagel_pressed"]
